# bachelors-thesis

./: Calculation times database - E(R).csv  Manifest.toml  Project.toml  README.md  computeErrorExponent.m  computeF0Metal.jl  core.mlx  coreVersion2.py  corev2.mlx  firstPrototype.mlx  g_matrix_M2_SNR1_N2_20250303112407.csv  g_matrix_M4_SNR19_N20_20250303110058.csv  g_matrix_M4_SNR8_N20_20250303111133.csv  get_data.py  initDynamoDB.m  main.mlx  mainCore.m  optimizationVersion3.mlx  quickEstimateExecutionTime.m  run_tests.py  testingExecutionTimes.mlx  testingJulia.jl  untitled.mlx
C++ Code/: constellation.cpp  constellation_analysis.cpp  matrix_ab.cpp  matrix_exponential.cpp
C++ Code/Codi Arnau C++/matrix/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Codi Alba/: E0.m  E0_matrix.m  F0.m  F0_matrix.m  GaussHermite_Locations_Weights.m  PAM_generator.m  matrix_generator.m  task4.mlx
MATLAB/: main.mlx
MATLAB Figures/: 3dLogPlotF0.fig  3dLogPlotF0p.fig  3dLogPlotF0pp.fig  3dLogPlotInitializationTimes.fig  3dPlotF0.fig  3dPlotF0p.fig  3dPlotF0pp.fig  3dPlotInitializationTimes.fig
functions/: addAwsData.m  add_data.py  computeAndStoreResults.m  computeE0.m  computeEoForRho.m  computeEoForRhoExponential.m  computeFirstDerivativeE0.m  coreFunction.m  createComplexNodesMatrix.m  createGMatrix.m  createPiMatrix.m  demoHermiteInterpolation.asv  demoHermiteInterpolation.m  derivativesE0.asv  derivativesE0.m  generateMatrices.asv  generateMatrices.m  generatePAMConstellation.m  getAwsData.m  hermiteInterp.m  initializeParameters.m  matlabOptimization.m  optimizeCVX.m  (+8 more)
(+64 files in other folders)
